# hermit-moq

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW-NEEDED.md  UPSTREAM.md  rust-toolchain.toml
crates/moq-asym-auth/: Cargo.toml  README.md
crates/moq-asym-auth/examples/: mint.rs
crates/moq-asym-auth/src/: lib.rs
docs/: ARCHITECTURE.md  BUILD.md  CAPSTONE-iroh-in-hermit.md  DHT-DISCOVERY.md
docs/reference/: build_hermit.sh  graft_auth.py
harness/: two-guest-quic.sh
hermit-rs/: Cargo.toml
hermit-rs/kernel/: Cargo.toml
hermit-rs/kernel/src/executor/: mod.rs  network.rs  network.rs.bak81  (+1 more)
patches/hermit-ecosystem/: iroh-dns-hermit.patch  netdev-hermit.patch  netwatch-hermit.patch  noq-hermit.patch  noq-udp-hermit.patch  ring-hermit.patch  rpv-hermit.patch  socket2-hermit.patch
patches/hermit-kernel/: 0001-network-run-conditional-self-wake.patch  0002-udp-recv-honor-o-nonblock.patch  0003-blockon-timer-fix.patch
patches/tokio/: hermit-tokio-1.52.3.patch
patches/uhyve/: README.md
prs/: DRAFT-PRS.md
prs/hermit-kernel/: README.md
prs/hermit-kernel/pr1-udp-nonblock/: 0001-udp-recv-honor-o-nonblock.patch  ISSUE.md  PR.md
prs/hermit-kernel/pr2-blockon-timeout/: 0001-blockon-relative-timeout.patch  ISSUE.md  PR.md
relay/: Cargo.toml  Cargo.toml.orig-paths
relay/rs/dht-probe/: Cargo.toml
relay/rs/moq-native/: Cargo.toml  Cargo.toml.bak2
relay/rs/moq-relay/: Cargo.toml  Cargo.toml.bak2  Cargo.toml.bak_httpstrip  Cargo.toml.bak_tcp
relay/rs/moq-token/: Cargo.toml  Cargo.toml.bak_ring
scripts/: build-hermit.sh
(+26 files in other folders)
