[package]
name = "moq-asym-auth"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust multi-algorithm JWT verifier (HS256 + EdDSA + ES256) for the Hermit moq-relay. No aws-lc/ring -> builds for x86_64-unknown-hermit. Drops into moq-relay/src/auth.rs."

# Pure-Rust crypto ONLY (no aws-lc-rs, no ring) — that constraint is the whole reason the Hermit
# relay verifies inline. ed25519-dalek (curve25519-dalek) and p256 (RustCrypto) are pure Rust and
# build for x86_64-unknown-hermit, same as the existing hmac+sha2 HS256 path.
[dependencies]
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
